rss fix and made 'older' posts appear as just the header for the main page. Starting to get too large a page

--- a/css/style20120128.css
+++ b/css/style20120128.css
@@ -86,6 +86,14 @@ img
 	font-size: 0.8em; 
 	font-weight: bold; 
 }
+
+.olderpostdate 
+{ 
+	font-size: 0.8em; 
+	color : #aaaaaa;
+	width: 150px;
+	margin-right: 15px;
+}
 .idea h1, .entry h1 
 {
 	margin-bottom: 5px;
